src/options/styles.css
/*
OptMeowt is licensed under the MIT License
Copyright (c) 2020 Kuba Alicki, Daniel Knopf, Abdallah Salia, Sebastian Zimmeck
privacy-tech-lab, https://privacytechlab.org/
*/

/*
styles.css
================================================================================
styles.css is the main css page for OptMeowt's options page
*/

/*
Dark Mode Switch
Based on https://github.com/coliff/dark-mode-switch
*/
@import "../libs/dark-mode-switch-1.0.0/dark-mode.css";

/********************************************************/

/*
Colors
*/
:root {
  --accent-color: #4472c4;
  --accent-color-lighter-80: #dae3f3;
  --accent-color-lighter-60: #b4c7e7;
  --accent-color-lighter-40: #8faadc;
  --accent-color-darker-25: #2f5597;
  --accent-color-darker-50: #203864;

  /* --text-color: #888fa1; */
  --text-color: #5a647d;
  /* --text-color-darker: #5a647d ; */
  --text-color-darker: #353b4a;
  --text-color-inactive: #d3d3d3;

  --highlight-light: #f2f2f2;
}

.text-color-darker {
  color: var(--text-color-darker);
}

.text-color {
  color: var(--text-color);
}

/********************************************************/

/*
Body style
*/
body {
  color: var(--text-color);
  user-select: none;
}

pre, code{
  white-space:pre-line;
}

/********************************************************/

/*
About page Q/A heading style
*/
.question {
  color: var(--text-color-darker);
  font-size: x-large;
  user-select: none;
}

.answer {
  color: var(--text-color);
  font-size: medium;
  user-select: none;
}

/********************************************************/

/*
Navbar item style
*/
.navbar-item {
  color: var(--text-color-inactive);
  opacity: 1;
  cursor: pointer;
  transition: all ease 0.5s;
}

.navbar-item.active {
  color: var(--accent-color);
}

/********************************************************/

/*
Sticky Domain List Navbar
*/
.domainlist-navbar {
  background-color: white;
  padding-top: 5px;
}

/* Added with  */
.sticky {
  position: fixed;
  top: 0;
  width: 100%;
  transition: all ease 0.25s;
  box-shadow: 0 8px 8px -10px var(--accent-color-lighter-60);
  z-index: 100;
}

/********************************************************/

/*
Radio buttons style
*/
input[type="radio"] {
  width: 35px;
  height: 35px;
  transition: all ease 0.5s;
}

input[type="radio"]:checked {
  transition: all ease 0.25s;
  background-image: var(--accent-color);
  box-shadow: 0 6px 12px var(--accent-color-lighter-60);
}

input[type="radio"]:hover:not(:checked) {
  transition: all ease 0.25s;
  box-shadow: 0 6px 12px var(--accent-color-lighter-60);
  border-color: transparent;
}

/********************************************************/

/*
`domainlist-view` options page checkbox style
*/
.check {
  /* appearance: none; */
  transform: scale(1.25);
  /* transform-style: inherit; */
  /* z-index: -10; */
}

/********************************************************/

/*
'settings-view' domainlist import & export button style
*/
.importexport-button {
  background-color: white;
  border-color: #888fa1;
  color: #888fa1;
  padding: 12px 16px;
  text-align: center;
  text-decoration-color: none;
  font-size: 14px;
  display: inline-block;
  border-radius: 10px;
  border-style: solid;
  box-shadow: 0 8px 16px -1px rgba(211, 211, 211, 0.2);
  outline: none;
  transition: all ease 0.25s;
}
.importexport-button:hover {
  background-color: var(--accent-color);
  border-color: var(--accent-color);
  color: white;
  box-shadow: 0 6px 12px var(--accent-color-lighter-60);
  transition: all ease 0.25s;
}

/********************************************************/

/* Animated iOS style switch
https://codepen.io/aaroniker/pen/oaQdQZ
*/
.switch {
  cursor: pointer;
}
.switch input {
  display: none;
}
.switch input + span {
  width: 48px;
  height: 28px;
  border-radius: 14px;
  transition: all 0.3s ease;
  display: block;
  position: relative;
  background: #888fa1;
  box-shadow: 0 8px 16px -1px rgba(211, 211, 211, 0.2);
}
.switch input + span:before,
.switch input + span:after {
  content: "";
  display: block;
  position: absolute;
  transition: all 0.3s ease;
}
.switch input + span:before {
  top: 5px;
  left: 5px;
  width: 18px;
  height: 18px;
  border-radius: 9px;
  border: 5px solid #fff;
}
.switch input + span:after {
  top: 5px;
  left: 32px;
  width: 6px;
  height: 18px;
  border-radius: 40%;
  transform-origin: 50% 50%;
  background: #fff;
  opacity: 0;
}
.switch input + span:active {
  transform: scale(0.92);
}
.switch input:checked + span {
  background: #48ea8b;
  box-shadow: 0 8px 16px -1px rgba(72, 234, 139, 0.2);
}
.switch input:checked + span:before {
  width: 0px;
  border-radius: 3px;
  margin-left: 27px;
  border-width: 3px;
  background: #fff;
}
.switch input:checked + span:after {
  animation: blobChecked 0.35s linear forwards 0.2s;
}
.switch input:not(:checked) + span:before {
  animation: blob 0.85s linear forwards 0.2s;
}
@keyframes blob {
  0%,
  100% {
    transform: scale(1);
  }
  30% {
    transform: scale(1.12, 0.94);
  }
  60% {
    transform: scale(0.96, 1.06);
  }
}
@keyframes blobChecked {
  0% {
    opacity: 1;
    transform: scaleX(1);
  }
  30% {
    transform: scaleX(1.44);
  }
  70% {
    transform: scaleX(1.18);
  }
  50%,
  99% {
    transform: scaleX(1);
    opacity: 1;
  }
  100% {
    transform: scaleX(1);
    opacity: 0;
  }
}
* {
  box-sizing: border-box;
}
*:before,
*:after {
  box-sizing: border-box;
}

*:before,
*:after {
  box-sizing: border-box;
}

.switch-smaller input + span {
  width: 48px;
  height: 28px;
  border-radius: 14px;
  transition: all 0.3s ease;
  display: block;
  position: relative;
  background: #888fa1;
  box-shadow: 0 8px 16px -1px rgba(211, 211, 211, 0.2);
  transform: scale(0.7);
}
.switch-smaller input + span:active {
  transform: scale(0.65);
}

/*========================================================================================*/
/*Walkthrough popups css*/

.tippy-box[data-theme~="custom-1"] {
  background-color: #87cefa;
  box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.43);
  color: white;
  border-radius: 5px;
  padding: 10px;
  text-align: left;
  float: left;
}

.tippy-box[data-theme~="custom-1"] button {
  color: white;
}

.tippy-box[data-theme~="custom-1"][data-placement^="top"]
  > .tippy-arrow::before {
  border-top-color: #87cefa;
}
.tippy-box[data-theme~="custom-1"][data-placement^="bottom"]
  > .tippy-arrow::before {
  border-bottom-color: #87cefa;
}
.tippy-box[data-theme~="custom-1"][data-placement^="left"]
  > .tippy-arrow::before {
  border-left-color: #87cefa;
}
.tippy-box[data-theme~="custom-1"][data-placement^="right"]
  > .tippy-arrow::before {
  border-right-color: #87cefa;
}

